manifests/mongo-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  selector:
    app: mongo-express
  ports:
    - name: http
      port: 80
      targetPort: 8081
