manifests/mongo-express/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nrt1-mongo-express
spec:
  defaultBackend:
    service:
      name: mongo-express
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - nrt1-mongo-express
